added prod built

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NODE_ENV = development
+NODE_ENV = production
 PORT = 4500
-DB_URI = mongodb://localhost:27017/graphqlReactEventBooking
+MONGODB_URI = mongodb://localhost:27017/graphqlReactEventBooking
 JWT_SEC = jwtsecretdev
